Création page htmls:
armor.html = ajout d'un formulaire pour insérer les données dans la db
Weapon.html = ajout d'un formulaire pour insérer les données dans la db
trinket.html = ajout d'un formulaire pour insérer les données dans la db

armor.py mise en place de armor_creation() qui va prendre les données du formulaire pour les insérer dans la db

weapon.py mise en place de weapon_creation() qui va prendre les données du formulaire pour les insérer dans la db

trinket.py mise en place de trinket_creation() qui va prendre les données du formulaire pour les insérer dans la db

(J'ai une petite erreur qui affiche none quand j'insère quelque chose pour les trois, à voir)

dans __init__.py j'ai mis donc les blueprint.

Dans index j'ai mis les chemins d'accès vers les pages concernées dans les <li>

--- a/TurnFight/templates/mainP/index.html
+++ b/TurnFight/templates/mainP/index.html
@@ -9,11 +9,11 @@
     <h1>Welcome The main page</h1>
     <h2>You can begin creating a fight scenario my choosing one of the options:</h2>
     <ul>
-        <li><a href="">Armor</a></li>
+        <li><a href="/armor">Armor</a></li>
         <li><a href="">Character</a></li>
         <li><a href="">Enemy</a></li>
-        <li><a href="">Trinket</a></li>
-        <li><a href="">Weapon</a></li>
+        <li><a href="/trinket">Trinket</a></li>
+        <li><a href="/weapon">Weapon</a></li>
     </ul>
 </section>
 </html>
