--- a/TurnFight/templates/mainP/index.html
+++ b/TurnFight/templates/mainP/index.html
@@ -10,7 +10,8 @@
     <h2>You can begin creating a fight scenario my choosing one of the options:</h2>
     <ul>
         <li><a href="/armor">Armor</a></li>
-        <li><a href="/character">Character</a></li>
+        <li><a href="/character">Character creation</a></li>
+        <li><a href="/charlist">Characters list</a></li>
         <li><a href="">Enemy</a></li>
         <li><a href="/trinket">Trinket</a></li>
         <li><a href="/weapon">Weapon</a></li>
