Delete_character(): Fonctionnel. Le personnage est effacé correctement de la base de donnees.
Prévu: Ajout de boutons de retour pour rendre les changements de pages plus rapides .

--- a/TurnFight/templates/charpage/charlist.html
+++ b/TurnFight/templates/charpage/charlist.html
@@ -22,6 +22,7 @@
     <tbody>
       {% for character in characters %}
       <tr>
+        <td>{{ character.char_id }}</td>
         <td>{{ character.char_name }}</td>
         <td>{{ character.char_class }}</td>
         <td>{{ character.char_level }}</td>
@@ -32,7 +33,7 @@
         <td>{{ character.trinket }}</td>
         <td><a href="/update_character">Update character equipment</a></td>
         <td>
-            <form action="{{ url_for('character.delete_character', character_id=character.char_id) }}" method="post">
+            <form action="{{ url_for('character.delete_character', char_id=character.char_id) }}" method="post">
                 <input type="submit" value="Delete">
             </form>
         </td>
